Update branch pattern for export config

--- a/assets/.circleci/config.yml
+++ b/assets/.circleci/config.yml
@@ -124,7 +124,7 @@ workflows:
       - export-config:
           filters:
             branches:
-              only: ^automation\/
+              only: /^automation\/.*/
       - build-install:
           filters:
             branches:
