--- a/assets/.ahoy.yml
+++ b/assets/.ahoy.yml
@@ -51,9 +51,13 @@ commands:
       # During local development, pygmy injects SSH key from the host, so specifying
       # key as $BAY_KEY environment variable is not required (the host key of every
       # developer must be added to Bay during project onboarding).
-      if [ "$BAY_KEY" ]; then
-        ahoy cli "mkdir -p /home/.ssh && echo -e \"$BAY_KEY\" > /home/.ssh/key && chmod 600 /home/.ssh/key;"
-      fi
+      BAY_KEY_FILE=${BAY_KEY_FILE:-bay_key} && \
+      {
+        if [ -f "${BAY_KEY_FILE}" ]; then
+          docker cp "${BAY_KEY_FILE}" $(docker-compose ps -q cli):/tmp/bay_key
+          ahoy cli "mkdir -p /home/.ssh && cp /tmp/bay_key /home/.ssh/key && chmod 600 /home/.ssh/key"
+        fi
+      }
 
   down:
     usage: Stop Docker containers and remove container, images, volumes and networks.
@@ -190,22 +194,22 @@ commands:
     hide: true
 
 entrypoint:
-- bash
-- "-c"
-- |
-  [ -f .env ] && export $(grep -v '^#' .env | xargs) && [ -f .env.local ] && export $(grep -v '^#' .env.local | xargs)
-  export PROJECT_NAME=${PROJECT_NAME:-$(basename $(pwd))}
-  export APP=${APP:-/app}
-  export WEBROOT=${WEBROOT:-docroot}
-  export MYSQL_HOST=${MYSQL_HOST:-mariadb}
-  export MYSQL_PORT=${MYSQL_PORT:-3306}
-  export COMPOSE_PROJECT_NAME=${COMPOSE_PROJECT_NAME:-$PROJECT_NAME}
-  export LOCALDEV_URL=${LOCALDEV_URL:-http://${PROJECT_NAME/[_ ]/-}.docker.amazee.io}
-  export COMPOSER=${COMPOSER:-composer.json}
-  export DRUPAL_PROFILE=${DRUPAL_PROFILE:-}
-  export DRUPAL_MODULE_PREFIX=${DRUPAL_MODULE_PREFIX:-mysite}
-  PHPCS_TARGETS=${PHPCS_TARGETS:-.} && export PHPCS_TARGETS=${PHPCS_TARGETS//,/ }
-  if [ "$CI" ]; then export ES_TPL=elasticsearch.ci.yml; fi
-  bash -c "$0" "$@"
-- '{{cmd}}'
-- '{{name}}'
+  - bash
+  - "-c"
+  - |
+    [ -f .env ] && export $(grep -v '^#' .env | xargs) && [ -f .env.local ] && export $(grep -v '^#' .env.local | xargs)
+    export PROJECT_NAME=${PROJECT_NAME:-$(basename $(pwd))}
+    export APP=${APP:-/app}
+    export WEBROOT=${WEBROOT:-docroot}
+    export MYSQL_HOST=${MYSQL_HOST:-mariadb}
+    export MYSQL_PORT=${MYSQL_PORT:-3306}
+    export COMPOSE_PROJECT_NAME=${COMPOSE_PROJECT_NAME:-$PROJECT_NAME}
+    export LOCALDEV_URL=${LOCALDEV_URL:-http://${PROJECT_NAME/[_ ]/-}.docker.amazee.io}
+    export COMPOSER=${COMPOSER:-composer.json}
+    export DRUPAL_PROFILE=${DRUPAL_PROFILE:-}
+    export DRUPAL_MODULE_PREFIX=${DRUPAL_MODULE_PREFIX:-mysite}
+    PHPCS_TARGETS=${PHPCS_TARGETS:-.} && export PHPCS_TARGETS=${PHPCS_TARGETS//,/ }
+    if [ "$CI" ]; then export ES_TPL=elasticsearch.ci.yml; fi
+    bash -c "$0" "$@"
+  - '{{cmd}}'
+  - '{{name}}'
