--- a/assets/.circleci/config.yml
+++ b/assets/.circleci/config.yml
@@ -57,6 +57,7 @@ aliases:
       - image: *builder-image
         environment:
           LAGOON_ENVIRONMENT_TYPE: ci
+          SSH_KEY_FINGERPRINT: *ssh_key_fingerprint
           DEPLOY_USER_EMAIL: sdp.devs@dpc.vic.gov.au
           DEPLOY_USER_NAME: sdpdeploy
     steps:
@@ -70,6 +71,11 @@ aliases:
       - add_ssh_keys:
           fingerprints:
             - *ssh_key_fingerprint
+      - run:
+          name: Add SSH key into container environment variable
+          command: |
+            SSH_KEY_FILE="${SSH_KEY_FINGERPRINT//:}" && SSH_KEY_FILE="id_rsa_${SSH_KEY_FILE//\"}" && export $SSH_KEY_FILE
+            cp ~/.ssh/$SSH_KEY_FILE /app/bay_key
       - run:
           name: Install site and export config
           command: .circleci/export-config.sh
