Add BAY_INGRESS variables to docker-compose.

--- a/assets/docker-compose.yml
+++ b/assets/docker-compose.yml
@@ -44,6 +44,9 @@ x-environment:
   BAY_IMAGE_VERSION: ${BAY_IMAGE_VERSION:-latest}
   LAGOON_ENVIRONMENT_TYPE: ${LAGOON_ENVIRONMENT_TYPE:-local}
   DRUPAL_REFRESH_SEARCHAPI: ${DRUPAL_REFRESH_SEARCHAPI:-}
+  BAY_INGRESS_PSK: ${BAY_INGRESS_PSK:-}
+  BAY_INGRESS_HEADER: ${BAY_INGRESS_HEADER:-}
+  BAY_INGRESS_ENABLED: ${BAY_INGRESS_ENABLED:-}
   # Uncomment to enable Xdebug and then restart via `ahoy up`.
   #XDEBUG_ENABLE: "true"
 
