--- a/assets/.docker/Dockerfile.nginx-drupal
+++ b/assets/.docker/Dockerfile.nginx-drupal
@@ -5,9 +5,7 @@ FROM ${CLI_IMAGE:-cli} as cli
 
 FROM singledigital/bay-nginx:${BAY_IMAGE_VERSION}
 
-ENV WEBROOT=docroot
-
 COPY .docker/global_redirects.conf /etc/nginx/helpers/global_redirects.conf
-RUN fix-permissions /etc/nginx
+RUN fix-permissions /etc/nginx/helpers/global_redirects.conf
 
 COPY --from=cli /app /app
